--- a/HTML Files/task2.html
+++ b/HTML Files/task2.html
@@ -1,83 +1,74 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Task-2</title>
-<meta charset="UTF-8">
-<meta name="description" content="A website which offers an virtual platform to get an effective communication between teacher and a student.">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheets" href="task2.css">
-</head>
-<body>
-<div class="header">
-<h1>Responsive Weblayout</h1>
-<h5>using <b>Flexbox layout</b>
-</div>
-<div class="row">
- <div class="menu1">
-   <h3>Notifications</h3>
-   <p span style="background-color:#1e90ff; color:white;">Live Classes</p>
-   <p>Exams Schedule</p>
-   <p>PPT topics</p>
-   <p>Fests</p>
-   <p>Campus Placements</p>
-   <p>Academic Calendar</p>
- </div>
- <div class="main">
-  <h2 style="text-align:center;">Live classes schedule</h2>
-  <div class="Rtable Rtable--5cols">
+  <head>
+    <title>Task-2</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="A website which offers an virtual platform to get an effective communication between teacher and a student.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="CSS Files/task2.css">
+  </head>
+  <body>
+    <div class="header">
+      <h1>Responsive Weblayout</h1>
+      <h5>using <b>Flexbox layout</b>
+      </div>
+      <div class="row">
 
-  <div class="Rtable-cell"><h3>S.No</h3></div>
-  <div class="Rtable-cell">Subject</div>
-  <div class="Rtable-cell">Faculty</div>
-  <div class="Rtable-cell">Time</div>
-  <div class="Rtable-cell">Link</div>
-
-  <div class="Rtable-cell">1</div>
-  <div class="Rtable-cell">Wave Theory</div>
-  <div class="Rtable-cell">Ramesh Sir</div>
-  <div class="Rtable-cell">9:00AM</div>
-  <div class="Rtable-cell"><a href="#">Click here</a></div>
-
-  <div class="Rtable-cell">2</div>
-  <div class="Rtable-cell">Communications</div>
-  <div class="Rtable-cell">Srivalli Mam</div>
-  <div class="Rtable-cell">10:00AM</div>
-  <div class="Rtable-cell"><a href="#">Click here</a></div>
-  
-  
-  <div class="Rtable-cell">3</div>
-  <div class="Rtable-cell">Mathemetics</div>
-  <div class="Rtable-cell">Srikanth sir</div>
-  <div class="Rtable-cell">11:00AM</div>
-  <div class="Rtable-cell"><a href="#">Click here</a></div>
-  
-  <div class="Rtable-cell">4</div>
-  <div class="Rtable-cell">SS</div>
-  <div class="Rtable-cell">Priya mam</div>
-  <div class="Rtable-cell">12:00PM</div>
-  <div class="Rtable-cell"><a href="#">Click here</a></div>
-
-</div>
- 
- </div>
- <div class="menu2">
-  <h3>Results</h3>
-  <p>B.Tech Semester Results</p>
-  <p>Research Papers</p>
-  <p>Sports Awards</p>
-  <p>Project winners</p>
-  <p>Placements</p> 
- </div>
-</div>
-
-<div class="footer">
- <p>For more information contact:<br><br>
- Phone no: +91 7894561231<br>
- email: abc@gmail.com
- </p>
-</div>
-
-</body>
+        <div class="menu1">
+          <h3>Notifications</h3>
+          <p span style="background-color:#1e90ff; color:white;">Live Classes</p>
+          <p>Exams Schedule</p>
+          <p>PPT topics</p>
+          <p>Fests</p>
+          <p>Campus Placements</p>
+          <p>Academic Calendar</p>
+        </div>
+        <div class="main">
+          <h2 style="text-align:center;">Live classes schedule</h2>
+          <div class="Rtable Rtable--5cols">
+          <div class="Rtable-cell"><h3>S.No</h3></div>
+          <div class="Rtable-cell"><h3>Subject</h3></div>
+          <div class="Rtable-cell"><h3>Faculty</h3></div>
+          <div class="Rtable-cell"><h3>Time</h3></div>
+          <div class="Rtable-cell"><h3>Link</h3></div>
+          <div class="Rtable-cell">1</div>
+          <div class="Rtable-cell">Wave Theory</div>
+          <div class="Rtable-cell">Ramesh Sir</div>
+          <div class="Rtable-cell">9:00AM</div>
+          <div class="Rtable-cell"><a href="#">Click here</a></div>
+          <div class="Rtable-cell">2</div>
+          <div class="Rtable-cell">Communications</div>
+          <div class="Rtable-cell">Srivalli Mam</div>
+          <div class="Rtable-cell">10:00AM</div>
+          <div class="Rtable-cell"><a href="#">Click here</a></div>
+          <div class="Rtable-cell">3</div>
+          <div class="Rtable-cell">Mathemetics</div>
+          <div class="Rtable-cell">Srikanth sir</div>
+          <div class="Rtable-cell">11:00AM</div>
+          <div class="Rtable-cell"><a href="#">Click here</a></div>
+          <div class="Rtable-cell">4</div>
+          <div class="Rtable-cell">SS</div>
+          <div class="Rtable-cell">Priya mam</div>
+          <div class="Rtable-cell">12:00PM</div>
+          <div class="Rtable-cell"><a href="#">Click here</a></div>
+        </div>
+      </div>
+      <div class="menu2">
+        <h3>Results</h3>
+        <p>B.Tech Semester Results</p>
+        <p>Research Papers</p>
+        <p>Sports Awards</p>
+        <p>Project winners</p>
+        <p>Placements</p>
+      </div>
+    </div>
+    <div class="footer">
+       <p>For more information contact:<br><br>
+       Phone no: +91 7894561231<br>
+       email: abc@gmail.com
+      </p>
+    </div>
+  </body>
 </html>
 
 
