--- a/HTML Files/index.html
+++ b/HTML Files/index.html
@@ -5,14 +5,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>imagechange</title>
+  <link rel="stylesheet" href="CSS Files/main.css">
 </head>
 
 <body>
   <h1></h1><br>
   <h2>Image changer</h2>
   <img src="images/images.jpg"><br>
-  <script src="main.js"></script>
   <button>Change username</button>
+
+  <p>Player1: Sai</p>
+
+
+  <script src="main.js"></script>
+
 </body>
 
 </html>
