--- a/HTML Files/JAVASCRIPT Files/data.html
+++ b/HTML Files/JAVASCRIPT Files/data.html
@@ -34,9 +34,14 @@
       }
     }
   </script>
-
-
-</body>
+  var obj = JSON.parse(x);
+  var i;
+  for (i = 0; i < obj.results.length; i++) { document.getElementById("demo").innerHTML +=obj.results[i].name + "<br>" ;
+    http://swapi.dev/api/people/?page=2 var xhttp=new XMLHttpRequest(); xhttp.onreadystatechange=function () { if
+    (this.readyState==4 && this.status==200) { var x=this.responseText; var obj=JSON.parse(x); var i; var list1="" ; for
+    (i=0; i < obj.results.length; i++) { list1 +=obj.results[i].name + "<br>" ; }
+    document.getElementById("demo").innerHTML=list1; } }; xhttp.open("GET", "http://swapi.dev/api/people/" , true);
+    xhttp.send(); </body>
 
 
 </html>
